# p2p_planner

./: .gitignore  README.md  docker-compose.dev.yml
backend/: .env  .env.example  Cargo.toml  README.md
backend/config/: default.toml
backend/migrations/: 0001_extensions_and_helpers.sql  0002_identity_and_access.sql  0003_boards_cards_and_collaboration.sql  0004_sync_and_audit_foundation.sql  0005_cards_archived_at.sql  0006_appearance_and_customization.sql  0007_activity_entries.sql
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
backend/src/auth/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs  token.rs
backend/src/db/: pool.rs
backend/src/http/: health.rs  middleware.rs  mod.rs  response.rs  router.rs
backend/src/modules/: common.rs  mod.rs
backend/src/modules/activity/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
backend/src/modules/appearance/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
backend/src/modules/audit/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
backend/src/modules/boards/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
backend/src/modules/cards/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
backend/src/modules/checklists/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
backend/tests/: README.md  SMOKE_SCENARIOS.md  appearance_smoke.rs  core_crud_smoke.rs  smoke_core_api.py
backend/tests/contract/: README.md
backend/tests/fixtures/: README.md
backend/tests/scenarios/: README.md
backend/tests/smoke/: README.md
backend/tests/support/: README.md
docs/: README.md
(+242 files in other folders)
